@@ -22,7 +22,7 @@ ot_add_source_file (FieldFunctionImplementation.cxx)
 ot_add_source_file (ParametricFunction.cxx)
 ot_add_source_file (ValueFunction.cxx)
 ot_add_source_file (SymbolicFunction.cxx)
-ot_add_source_file (TemporalFunction.cxx)
+ot_add_source_file (VertexValueFunction.cxx)
 ot_add_source_file (NumericalMathFunction.cxx)
 ot_add_source_file (NumericalMathFunctionImplementation.cxx)
 ot_add_source_file (LinearFunction.cxx)
@@ -174,7 +174,7 @@ ot_install_header_file (FieldFunctionImplementation.hxx)
 ot_install_header_file (FieldFunction.hxx)
 ot_install_header_file (ValueFunction.hxx)
 ot_install_header_file (SymbolicFunction.hxx)
-ot_install_header_file (TemporalFunction.hxx)
+ot_install_header_file (VertexValueFunction.hxx)
 ot_install_header_file (ProductNumericalMathHessianImplementation.hxx)
 ot_install_header_file (DatabaseFunction.hxx)
 ot_install_header_file (DatabaseNumericalMathEvaluationImplementation.hxx)
