@@ -199,7 +199,7 @@ ot_check_test (BasisSequence_std)
 ot_check_test (LARS_std)
 ot_check_test (FieldFunction_std)
 ot_check_test (ValueFunction_std)
-ot_check_test (TemporalFunction_std)
+ot_check_test (VertexValueFunction_std)
 ot_check_test (BoxCoxEvaluationImplementation_std)
 ot_check_test (BoxCoxTransform_std)
 ot_check_test (InverseBoxCoxEvaluationImplementation_std)
