@@ -159,7 +159,7 @@ ot_pyinstallcheck_test (BasisSequence_std)
 ot_pyinstallcheck_test (LARS_std)
 ot_pyinstallcheck_test (FieldFunction_std)
 ot_pyinstallcheck_test (ValueFunction_std)
-ot_pyinstallcheck_test (TemporalFunction_std)
+ot_pyinstallcheck_test (VertexValueFunction_std)
 ot_pyinstallcheck_test (BoxCoxEvaluationImplementation_std)
 ot_pyinstallcheck_test (BoxCoxTransform_std)
 ot_pyinstallcheck_test (InverseBoxCoxEvaluationImplementation_std)
